[gd_scene load_steps=20 format=4 uid="uid://bc6i4cfw7kyab"]

[ext_resource type="Script" uid="uid://b8bgimwx6cp2u" path="res://level_editor/level_editor_3d.gd" id="1_goklc"]
[ext_resource type="Script" uid="uid://oqodjt6eesgk" path="res://level_editor/box_tool.gd" id="2_j0u0h"]
[ext_resource type="Script" uid="uid://c22qgyyx62dq" path="res://level_editor/fill_tool.gd" id="3_jxark"]
[ext_resource type="Script" uid="uid://3k8d4kg2e70d" path="res://selection_tool.gd" id="4_1g3f4"]
[ext_resource type="Script" uid="uid://darvecvu3imyy" path="res://level_editor/pencil_tool.gd" id="4_2glrk"]
[ext_resource type="Script" uid="uid://c84f3aw2psi6p" path="res://level_editor/line_tool.gd" id="5_2glrk"]
[ext_resource type="Material" uid="uid://dnej2hh0h3fkd" path="res://level_editor/level_editor_grid.tres" id="6_2glrk"]
[ext_resource type="PackedScene" uid="uid://te55godg1quy" path="res://level_editor/editor_ui.tscn" id="9_t3fpq"]
[ext_resource type="Script" uid="uid://dgooyjwd64l8b" path="res://grid_mesh.gd" id="24_dqkhq"]
[ext_resource type="Material" uid="uid://dm1kyrlnn7764" path="res://level_editor/selection.material" id="26_v8u0m"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u24qb"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_j0u0h"]
sky_material = SubResource("ProceduralSkyMaterial_u24qb")

[sub_resource type="Environment" id="Environment_jxark"]
background_mode = 2
sky = SubResource("Sky_j0u0h")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_4bx4p"]

[sub_resource type="PlaneMesh" id="PlaneMesh_4bx4p"]
lightmap_size_hint = Vector2i(202, 202)
size = Vector2(50, 50)

[sub_resource type="ArrayMesh" id="ArrayMesh_snjyl"]
_surfaces = [{
"aabb": AABB(-24.5, 0, -24.5, 50, 1e-05, 50),
"format": 34359738369,
"primitive": 1,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 204,
"vertex_data": PackedByteArray("AADEwQAAAAAAAMTBAADMQQAAAAAAAMTBAADEwQAAAAAAALzBAADMQQAAAAAAALzBAADEwQAAAAAAALTBAADMQQAAAAAAALTBAADEwQAAAAAAAKzBAADMQQAAAAAAAKzBAADEwQAAAAAAAKTBAADMQQAAAAAAAKTBAADEwQAAAAAAAJzBAADMQQAAAAAAAJzBAADEwQAAAAAAAJTBAADMQQAAAAAAAJTBAADEwQAAAAAAAIzBAADMQQAAAAAAAIzBAADEwQAAAAAAAITBAADMQQAAAAAAAITBAADEwQAAAAAAAHjBAADMQQAAAAAAAHjBAADEwQAAAAAAAGjBAADMQQAAAAAAAGjBAADEwQAAAAAAAFjBAADMQQAAAAAAAFjBAADEwQAAAAAAAEjBAADMQQAAAAAAAEjBAADEwQAAAAAAADjBAADMQQAAAAAAADjBAADEwQAAAAAAACjBAADMQQAAAAAAACjBAADEwQAAAAAAABjBAADMQQAAAAAAABjBAADEwQAAAAAAAAjBAADMQQAAAAAAAAjBAADEwQAAAAAAAPDAAADMQQAAAAAAAPDAAADEwQAAAAAAANDAAADMQQAAAAAAANDAAADEwQAAAAAAALDAAADMQQAAAAAAALDAAADEwQAAAAAAAJDAAADMQQAAAAAAAJDAAADEwQAAAAAAAGDAAADMQQAAAAAAAGDAAADEwQAAAAAAACDAAADMQQAAAAAAACDAAADEwQAAAAAAAMC/AADMQQAAAAAAAMC/AADEwQAAAAAAAAC/AADMQQAAAAAAAAC/AADEwQAAAAAAAAA/AADMQQAAAAAAAAA/AADEwQAAAAAAAMA/AADMQQAAAAAAAMA/AADEwQAAAAAAACBAAADMQQAAAAAAACBAAADEwQAAAAAAAGBAAADMQQAAAAAAAGBAAADEwQAAAAAAAJBAAADMQQAAAAAAAJBAAADEwQAAAAAAALBAAADMQQAAAAAAALBAAADEwQAAAAAAANBAAADMQQAAAAAAANBAAADEwQAAAAAAAPBAAADMQQAAAAAAAPBAAADEwQAAAAAAAAhBAADMQQAAAAAAAAhBAADEwQAAAAAAABhBAADMQQAAAAAAABhBAADEwQAAAAAAAChBAADMQQAAAAAAAChBAADEwQAAAAAAADhBAADMQQAAAAAAADhBAADEwQAAAAAAAEhBAADMQQAAAAAAAEhBAADEwQAAAAAAAFhBAADMQQAAAAAAAFhBAADEwQAAAAAAAGhBAADMQQAAAAAAAGhBAADEwQAAAAAAAHhBAADMQQAAAAAAAHhBAADEwQAAAAAAAIRBAADMQQAAAAAAAIRBAADEwQAAAAAAAIxBAADMQQAAAAAAAIxBAADEwQAAAAAAAJRBAADMQQAAAAAAAJRBAADEwQAAAAAAAJxBAADMQQAAAAAAAJxBAADEwQAAAAAAAKRBAADMQQAAAAAAAKRBAADEwQAAAAAAAKxBAADMQQAAAAAAAKxBAADEwQAAAAAAALRBAADMQQAAAAAAALRBAADEwQAAAAAAALxBAADMQQAAAAAAALxBAADEwQAAAAAAAMRBAADMQQAAAAAAAMRBAADEwQAAAAAAAMxBAADMQQAAAAAAAMxBAADEwQAAAAAAAMTBAADEwQAAAAAAAMxBAAC8wQAAAAAAAMTBAAC8wQAAAAAAAMxBAAC0wQAAAAAAAMTBAAC0wQAAAAAAAMxBAACswQAAAAAAAMTBAACswQAAAAAAAMxBAACkwQAAAAAAAMTBAACkwQAAAAAAAMxBAACcwQAAAAAAAMTBAACcwQAAAAAAAMxBAACUwQAAAAAAAMTBAACUwQAAAAAAAMxBAACMwQAAAAAAAMTBAACMwQAAAAAAAMxBAACEwQAAAAAAAMTBAACEwQAAAAAAAMxBAAB4wQAAAAAAAMTBAAB4wQAAAAAAAMxBAABowQAAAAAAAMTBAABowQAAAAAAAMxBAABYwQAAAAAAAMTBAABYwQAAAAAAAMxBAABIwQAAAAAAAMTBAABIwQAAAAAAAMxBAAA4wQAAAAAAAMTBAAA4wQAAAAAAAMxBAAAowQAAAAAAAMTBAAAowQAAAAAAAMxBAAAYwQAAAAAAAMTBAAAYwQAAAAAAAMxBAAAIwQAAAAAAAMTBAAAIwQAAAAAAAMxBAADwwAAAAAAAAMTBAADwwAAAAAAAAMxBAADQwAAAAAAAAMTBAADQwAAAAAAAAMxBAACwwAAAAAAAAMTBAACwwAAAAAAAAMxBAACQwAAAAAAAAMTBAACQwAAAAAAAAMxBAABgwAAAAAAAAMTBAABgwAAAAAAAAMxBAAAgwAAAAAAAAMTBAAAgwAAAAAAAAMxBAADAvwAAAAAAAMTBAADAvwAAAAAAAMxBAAAAvwAAAAAAAMTBAAAAvwAAAAAAAMxBAAAAPwAAAAAAAMTBAAAAPwAAAAAAAMxBAADAPwAAAAAAAMTBAADAPwAAAAAAAMxBAAAgQAAAAAAAAMTBAAAgQAAAAAAAAMxBAABgQAAAAAAAAMTBAABgQAAAAAAAAMxBAACQQAAAAAAAAMTBAACQQAAAAAAAAMxBAACwQAAAAAAAAMTBAACwQAAAAAAAAMxBAADQQAAAAAAAAMTBAADQQAAAAAAAAMxBAADwQAAAAAAAAMTBAADwQAAAAAAAAMxBAAAIQQAAAAAAAMTBAAAIQQAAAAAAAMxBAAAYQQAAAAAAAMTBAAAYQQAAAAAAAMxBAAAoQQAAAAAAAMTBAAAoQQAAAAAAAMxBAAA4QQAAAAAAAMTBAAA4QQAAAAAAAMxBAABIQQAAAAAAAMTBAABIQQAAAAAAAMxBAABYQQAAAAAAAMTBAABYQQAAAAAAAMxBAABoQQAAAAAAAMTBAABoQQAAAAAAAMxBAAB4QQAAAAAAAMTBAAB4QQAAAAAAAMxBAACEQQAAAAAAAMTBAACEQQAAAAAAAMxBAACMQQAAAAAAAMTBAACMQQAAAAAAAMxBAACUQQAAAAAAAMTBAACUQQAAAAAAAMxBAACcQQAAAAAAAMTBAACcQQAAAAAAAMxBAACkQQAAAAAAAMTBAACkQQAAAAAAAMxBAACsQQAAAAAAAMTBAACsQQAAAAAAAMxBAAC0QQAAAAAAAMTBAAC0QQAAAAAAAMxBAAC8QQAAAAAAAMTBAAC8QQAAAAAAAMxBAADEQQAAAAAAAMTBAADEQQAAAAAAAMxBAADMQQAAAAAAAMTBAADMQQAAAAAAAMxB")
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dqkhq"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.23031491, 0.23031494, 0.23031494, 0.49803922)
disable_receive_shadows = true
proximity_fade_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_v8u0m"]
lightmap_size_hint = Vector2i(254, 266)
size = Vector3(50, 1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_1g3f4"]
size = Vector3(0.1, 1, 50)

[node name="LevelEditor3D" type="Node3D"]
script = ExtResource("1_goklc")
size = null

[node name="SelectionTool" type="Node" parent="."]
script = ExtResource("4_1g3f4")
metadata/_custom_type_script = "uid://3k8d4kg2e70d"

[node name="BoxTool" type="Node" parent="."]
script = ExtResource("2_j0u0h")

[node name="FillTool" type="Node" parent="."]
script = ExtResource("3_jxark")

[node name="PencilTool" type="Node" parent="."]
script = ExtResource("4_2glrk")

[node name="LineTool" type="Node" parent="."]
script = ExtResource("5_2glrk")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jxark")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="FreeCameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="TopDownCamera" type="Camera3D" parent="FreeCameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -0.041335106, 0.9991454, 0, -0.9991454, -0.041335106, 0, 12, 0)
projection = 1
size = 25.0

[node name="FreeCamera" type="Camera3D" parent="FreeCameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.70710677, 0.70710677, 0, -0.70710677, 0.70710677, 0, 5, 10)
fov = 90.0

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("WorldBoundaryShape3D_4bx4p")

[node name="FloorPlaceholder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.66, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloorPlaceholder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
material_override = ExtResource("6_2glrk")
mesh = SubResource("PlaneMesh_4bx4p")
surface_material_override/0 = ExtResource("6_2glrk")

[node name="GridMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_snjyl")
surface_material_override/0 = SubResource("StandardMaterial3D_dqkhq")
script = ExtResource("24_dqkhq")
material = SubResource("StandardMaterial3D_dqkhq")
grid_size = Vector2i(50, 50)
metadata/_custom_type_script = "uid://dgooyjwd64l8b"

[node name="XMirrorLine" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_v8u0m")
surface_material_override/0 = ExtResource("26_v8u0m")

[node name="YMirrorLine" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_1g3f4")
surface_material_override/0 = ExtResource("26_v8u0m")

[node name="EditorUi" parent="." instance=ExtResource("9_t3fpq")]
unique_name_in_owner = true
visible = false
